[gd_scene load_steps=3 format=3 uid="uid://di24roy3g7qeb"]

[ext_resource type="Script" path="res://prog_52a.gd" id="1_xub64"]

[sub_resource type="LabelSettings" id="LabelSettings_jatg1"]
font_size = 33

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xub64")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 44.0
offset_right = 649.0
offset_bottom = 93.0
text = "Length:"
label_settings = SubResource("LabelSettings_jatg1")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 44.0
offset_right = 1123.0
offset_bottom = 93.0
text = "Width:"
label_settings = SubResource("LabelSettings_jatg1")
horizontal_alignment = 1

[node name="lblArea" type="Label" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 203.0
offset_right = 649.0
offset_bottom = 252.0
text = "Area:"
label_settings = SubResource("LabelSettings_jatg1")
horizontal_alignment = 1

[node name="lblPerim" type="Label" parent="."]
layout_mode = 0
offset_left = 606.0
offset_top = 205.0
offset_right = 1136.0
offset_bottom = 254.0
text = "Perimeter:
"
label_settings = SubResource("LabelSettings_jatg1")
horizontal_alignment = 1

[node name="txtWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 690.0
offset_top = 92.0
offset_right = 1045.0
offset_bottom = 199.0

[node name="txtLength" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 94.0
offset_right = 560.0
offset_bottom = 201.0

[node name="btnCalculate" type="Button" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = 415.0
offset_right = 358.0
offset_bottom = 512.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 415.0
offset_right = 743.0
offset_bottom = 512.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 858.0
offset_top = 415.0
offset_right = 1098.0
offset_bottom = 512.0
text = "Exit"

[connection signal="pressed" from="btnCalculate" to="." method="_on_btn_calculate_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
